# Filatelista

./: CMakeLists.txt  znaczki.cpp
tests/: io_tests.sh  tests.cpp
